	Added group 4, some Polish channels (NC+ sorting order)
	During play '0' jumps to 0:00:00 and now resets posmark index also to 0
	Sort the Recordingslist so no double maps are shown
	Volume steps are 1, if volume < 5
	in EPG/ Guide view you can switch groups with << and >> (Live Update only if 19x3 with pip enabled image)


0.22	Updated EPG filter for 42E, canal sat (tid 1088), canal+ (tid 1060), CDS (veronica, iConcerts, Animax)
	Fix: Right month is now shown in recordings menu.
	Fix: multiple EPG languages on 1 transponder.
	Fix: crash when media/recordings directory is empty
	Fix: 'epg now' (it wasn't always the right info on some UK channels.)
	Added some channels for 42E to group 3
	Updated channels.conf
	SmartwebTV timer handling added (No more restfulapi needed for timers)
	Info about audio/video in Infobox when playing Recording
	Date/Time info during play
	Update dutch tv/radio channels on 19E
	More info for SearchTimer
	audio/subs type only from "Onload" function for now. (Need the space in the settings menu)
	Change (preset) server from settings menu, (all channelsx.js have to use the same server-ip)
	Save audio priority permanent (removed 'none' setting)
	Dynamic audio selection with green button while watching. (Settings menu as before)
	Added EPG Icon for radio channels.
	From settings menu channel groups can be switched off.
	In settings menu you can use GREEN to change screen resolution.

0.21	Language in sepate file, link your lang_XXX.js to language.js to activate it.
	Updated EPG filter, (DVB-T defaults to German), added MTV transponder on 19E.
	Audio, subs etc settings are now stored on the box. So they are kept after reboot.
	OSD Time out can be set from settings.js
	Pause Live TV on Server
	Added a 'none' to audio prio settings, which restores the factory setting.
	Timer ADD/ Timer DEL is now possible by using SmartTVWeb (Show Timers still uses restfulapi) (No more patching of restfulapi is needed!)